force-app/main/default/objects/Launchpad__Document__c/fields/Approved_by_Intermediary__c.field-meta.xml
<CustomField>
    <fullName>Approved_by_Intermediary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved by Intermediary</label>
    <type>Checkbox</type>
</CustomField>