force-app/main/default/objects/Launchpad__Document__c/fields/Document_On_File__c.field-meta.xml
<CustomField>
    <fullName>Document_On_File__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Document is on file in another system</inlineHelpText>
    <label>Document On File</label>
    <type>Checkbox</type>
</CustomField>