force-app/main/default/objects/Launchpad__Document__c/fields/Launchpad__Participant_Community_Document_Types__c.field-meta.xml
<CustomField>
    <fullName>Launchpad__Participant_Community_Document_Types__c</fullName>
    <label>Participant Community Document Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W-9</fullName>
            </value>
            <value>
                <fullName>Proof of Social Security Number</fullName>
            </value>
            <value>
                <fullName>Proof of ID</fullName>
            </value>
            <value>
                <fullName>Proof of Citizenship</fullName>
            </value>
            <value>
                <fullName>Proof of Residency</fullName>
            </value>
            <value>
                <fullName>Proof of Income</fullName>
            </value>
            <value>
                <fullName>Credential/Diploma/Degree</fullName>
                <isActive>false</isActive>
                <label>Credential/Diploma/Degree</label>
            </value>
            <value>
                <fullName>Driver&apos;s License or Government ID</fullName>
                <isActive>false</isActive>
                <label>Driver&apos;s License or Government ID</label>
            </value>
            <value>
                <fullName>Family Income Verification Statement &amp; Proof</fullName>
                <isActive>false</isActive>
                <label>Family Income Verification Statement &amp; Proof</label>
            </value>
            <value>
                <fullName>Lease Agreement</fullName>
                <isActive>false</isActive>
                <label>Lease Agreement</label>
            </value>
            <value>
                <fullName>Paystubs</fullName>
                <isActive>false</isActive>
                <label>Paystubs</label>
            </value>
            <value>
                <fullName>Proof of Address</fullName>
                <isActive>false</isActive>
                <label>Proof of Address</label>
            </value>
            <value>
                <fullName>Resume</fullName>
                <isActive>false</isActive>
                <label>Resume</label>
            </value>
            <value>
                <fullName>SS Card or Authorization to Work</fullName>
                <isActive>false</isActive>
                <label>SS Card or Authorization to Work</label>
            </value>
            <value>
                <fullName>Unemployment/Dislocated Worker Proof</fullName>
                <isActive>false</isActive>
                <label>Unemployment/Dislocated Worker Proof</label>
            </value>
            <value>
                <fullName>Veteran Status (DD-214)</fullName>
                <isActive>false</isActive>
                <label>Veteran Status (DD-214)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>