force-app/main/default/objects/Launchpad__Document__c/fields/Launchpad__Type__c.field-meta.xml
<CustomField>
    <fullName>Launchpad__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>W-9</fullName>
            </value>
            <value>
                <fullName>Proof of Social Security Number</fullName>
            </value>
            <value>
                <fullName>Proof of ID</fullName>
            </value>
            <value>
                <fullName>Proof of Citizenship</fullName>
            </value>
            <value>
                <fullName>Proof of Residency</fullName>
            </value>
            <value>
                <fullName>Proof of Income</fullName>
            </value>
            <value>
                <fullName>Proof of Clearance</fullName>
            </value>
            <value>
                <fullName>W-4</fullName>
            </value>
            <value>
                <fullName>I-9</fullName>
            </value>
            <value>
                <fullName>Resume</fullName>
                <isActive>false</isActive>
                <label>Resume</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>