force-app/main/default/objects/Launchpad__Document__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <label>Rejection Reason</label>
    <type>TextArea</type>
</CustomField>